prevent the loading indicator from covering modal dialogs

--- a/web/css/bhims.css
+++ b/web/css/bhims.css
@@ -823,7 +823,7 @@ when the user clicks the button*/
   position: fixed;
   left: 50%;
   top: 50%;
-  z-index: 10001;
+  z-index: 1001;
   width: 150px;
   height: 150px;
   margin: -75px 0 0 -75px;
@@ -838,7 +838,7 @@ when the user clicks the button*/
 
 
 #loading-indicator-background {
-  z-index: 10000;
+  z-index: 1000;
 }
 
 @keyframes spin {
